Change Log
	

20191215 SCL
- added #ifndef VERSION around #define VERSION
	
D6.1.1 20191215 SCL
- display auth lock status on LCD in disabled & sleeping states
	
D6.1.0 20191003 SCL
- if AUTH_LOCK != 0 or using hardware lock pin, always lock automatically in
	State A
	
20190822 SCL
- for consistency/safety sake, force reboot after exiting Setup menu
	
20190709 SCL
- turn on RAPI_WF -> makes sketch too big for AVR build tools 1.6.15
  -> testing v1.6.23, which builds sketch 32574 bytes and uses RAM 1570 (2 bytes less than 1.6.15)
- turn off OCPP by default
- N.B.: With current default settings, sketch is too big when built with AVR build tools v1.6.15. Can turn off RAPI_WF to reduce size, or use v1.6.23, which builds a sketch that fits - FOR TESTING ONLY
	
20190703 SCL
- change OEII voltage defaults to lincomatic's from CraigK's
	
D6.0.0 20190626 SCL
- added code to facilitate OCPP support
- RAPI changes that may render code incompatible w/ existing clients
  -> see $AB, $AT, $GS
     -> $AB async notification sent at boot
     -> $AT replaces $ST async notification
     -> $GS has new extra parameters, and first parameter, state,
	is now HEX instead of DEC, for consistency with $AT
  -> sequence ID always enabled
  -> $FF command always enabled, deprecating old redundant commands
  -> $WF enabled only if RAPI_WF defined
  -> get rid of RAPI_RESPONSE_CHK define.. always enabled
- J1772EvseController -> expand m_bVFlags to m_wVFlags, get rid of m_bVFlags2,
	clean up flag setting/clearing/testing code
  -> added ECVF_UI_IN_MENU... flag is set/unset when in/out of UI menus..
	$AT is sent on transition
  -> bump RAPIVER to 5.0.0
	
D5.2.0 20190329 SCL
- change $GS to return state(hex) elapsed(dec) pilotstate(hex)
- get rid of async notification $ST - always send $AT	

D5.1.0 20181109 SCL
- change session time & charge limits to be absolute instead of extending the current session. e.g. already charged 2kWh.. set limit to 3kWh ... stop @ 3kWh instead of 5kWh
	