@@ -1,5 +1,8 @@
 Change Log
 	
+D6.1.2 20191216 SCL
+- fix bug in relay opening delay code for SLEEP state - wasn't reading/comparing charging current correctly.. was always reading too low, so would instantly open the contactor
+- change SLEEP delay threshold current from 3A -> 1A
 
 20191215 SCL
 - added #ifndef VERSION around #define VERSION
